<<<<<<< HEAD
[gd_scene load_steps=80 format=2]
=======
[gd_scene load_steps=79 format=2]
>>>>>>> 53ac37eea3e3e91c2d22a7c80daa4f115bbf89c0

[ext_resource path="res://Recursos/Imágenes/Fondo_DV_Provisional.jpg" type="Texture" id=1]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/Escenario/exam_big.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/Escenario/exam_small.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_lado_2.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_atras_1.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_frente_0.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_atras_2.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_lado_0.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_lado_1.png" type="Texture" id=9]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_frente_2.png" type="Texture" id=10]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_frente_1.png" type="Texture" id=11]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/spr_player_atras_0.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Personaje_DVFinal.gd" type="Script" id=13]
[ext_resource path="res://Recursos/Imágenes/barsHorizontal.png" type="Texture" id=14]
[ext_resource path="res://Escenas/Btn_Menu.gd" type="Script" id=15]
[ext_resource path="res://Recursos/Imágenes/elementStone018.png" type="Texture" id=16]
[ext_resource path="res://Scripts/Escena_DV.gd" type="Script" id=17]
[ext_resource path="res://Recursos/Fuentes/Fuente_MP.tres" type="DynamicFont" id=18]
[ext_resource path="res://Scripts/LifeBarScript.gd" type="Script" id=19]
[ext_resource path="res://Recursos/Fuentes/Kenney Pixel Square.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/Escenario/key_small.png" type="Texture" id=21]
[ext_resource path="res://Recursos/Sprites/Personaje_DV/Escenario/Sound_big.png" type="Texture" id=22]
[ext_resource path="res://Escenas/Control.gd" type="Script" id=23]
[ext_resource path="res://Recursos/Imágenes/exit.png" type="Texture" id=24]
[ext_resource path="res://Recursos/Imágenes/pause.png" type="Texture" id=25]
[ext_resource path="res://Recursos/Imágenes/left.png" type="Texture" id=26]
[ext_resource path="res://Recursos/Imágenes/leaderboardsComplex.png" type="Texture" id=27]
[ext_resource path="res://Recursos/Imágenes/audioOn.png" type="Texture" id=28]
[ext_resource path="res://Recursos/Imágenes/audioOff.png" type="Texture" id=29]
[ext_resource path="res://Recursos/Imágenes/red_sliderRight.png" type="Texture" id=30]
[ext_resource path="res://Escenas/ControlMenu.gd" type="Script" id=31]
[ext_resource path="res://Escenas/Select.gd" type="Script" id=32]
[ext_resource path="res://Recursos/Sounds/Game_Sound.mp3" type="AudioStream" id=33]
[ext_resource path="res://Escenas/Volume.gd" type="Script" id=34]
[ext_resource path="res://Escenas/Llave.gd" type="Script" id=35]
<<<<<<< HEAD
[ext_resource path="res://Recursos/Sprites/Escenario/emote_heart.png" type="Texture" id=36]
[ext_resource path="res://Recursos/Sprites/Escenario/block_locked_large.png" type="Texture" id=37]
=======
[ext_resource path="res://Recursos/Sprites/Personaje_DV/Escenario/key_big.png" type="Texture" id=36]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 10.5, 12.5 )
>>>>>>> 53ac37eea3e3e91c2d22a7c80daa4f115bbf89c0

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "AnimSound",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=58]
extents = Vector2( 10, 11 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 21 ) ],
"loop": true,
"name": "SoundAnim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=57]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "atras",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": true,
"name": "lado",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0
height = 6.0

[sub_resource type="DynamicFontData" id=28]
font_path = "res://Recursos/Fuentes/Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=29]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 28 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.301961, 0.596078, 0.301961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.980392, 0.254902, 0.254902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
shadow_size = 4

[sub_resource type="DynamicFont" id=15]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.945098, 0.54902, 0.0431373, 1 )
shadow_size = 8

[sub_resource type="DynamicFont" id=25]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.945098, 0.54902, 0.0431373, 1 )
shadow_size = 8

[sub_resource type="DynamicFont" id=27]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="StyleBoxEmpty" id=32]

[sub_resource type="StyleBoxEmpty" id=33]

[sub_resource type="StyleBoxEmpty" id=34]

[sub_resource type="DynamicFont" id=37]
size = 14
font_data = ExtResource( 20 )

[sub_resource type="Theme" id=36]
default_font = SubResource( 37 )

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 43.5, 7.5 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 28.5, 7.5 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 86, 58 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 57.5, 57.5 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 58.5, 29.5 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 114, 115.5 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 30, 29.5 )

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 217.5, 56.5 )

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 57.5, 29.5 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 43, 43 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 360, 181.5 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 114.5, 64.75 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 27.5, 64.5 )

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 29.5, 35.5 )

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 56, 26.5 )

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 202.5, 70.5 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 58.5, 72 )

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 9.5, 393.5 )

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 588.5, 10 )

[sub_resource type="RectangleShape2D" id=58]
extents = Vector2( 10, 29 )

[node name="Escena_DV" type="Node2D"]
script = ExtResource( 17 )

[node name="Mapa" type="Sprite" parent="."]
position = Vector2( 5618, 7182 )
scale = Vector2( 1.13125, 1.13125 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 10240, 12800 )

[node name="Hazard_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Punteo_Timer" type="Timer" parent="."]

[node name="Inicio_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Posicion_Inicial" type="Position2D" parent="."]
position = Vector2( 87, 267 )

[node name="Hazard_LE" type="StaticBody2D" parent="." groups=["haceDamage"]]
<<<<<<< HEAD
position = Vector2( 131, 216 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Hazard_LE"]
scale = Vector2( 0.0334896, 0.0334896 )
frames = SubResource( 13 )
animation = "AnimSound"
speed_scale = 0.6
playing = true
=======
position = Vector2( 83, 195 )
>>>>>>> 53ac37eea3e3e91c2d22a7c80daa4f115bbf89c0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hazard_LE"]
position = Vector2( -12, -2 )
shape = SubResource( 14 )

[node name="Pinchos" type="Node2D" parent="."]

[node name="Examen" type="Area2D" parent="Pinchos" groups=["haceDamage"]]
position = Vector2( 105, 193 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pinchos/Examen"]
scale = Vector2( 0.0629876, 0.0629876 )
frames = SubResource( 13 )
animation = "AnimSound"
speed_scale = 0.6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pinchos/Examen"]
shape = SubResource( 58 )

[node name="Llaves" type="Node2D" parent="."]

[node name="Llaves" type="Area2D" parent="Llaves"]
position = Vector2( 90, 243 )
script = ExtResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Llaves/Llaves"]
scale = Vector2( 0.0478431, 0.0478431 )
frames = SubResource( 22 )
animation = "SoundAnim"
speed_scale = 0.6
playing = true

[node name="EmoteHeart" type="Sprite" parent="Llaves/Llaves/AnimatedSprite"]
position = Vector2( 3950.51, 296.288 )
texture = ExtResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Llaves/Llaves"]
shape = SubResource( 57 )

[node name="Llaves2" type="Area2D" parent="Llaves"]
position = Vector2( 270, 245 )
script = ExtResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Llaves/Llaves2"]
scale = Vector2( 0.0434763, 0.0434763 )
frames = SubResource( 22 )
animation = "SoundAnim"
speed_scale = 0.6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Llaves/Llaves2"]
shape = SubResource( 57 )

[node name="Personaje_DV" type="KinematicBody2D" parent="."]
position = Vector2( 12, 239 )
script = ExtResource( 13 )
Velocidad = 100

[node name="AnimatedSprite" type="AnimatedSprite" parent="Personaje_DV"]
scale = Vector2( 0.098783, 0.098783 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje_DV"]
shape = SubResource( 2 )

[node name="InvulnerabilityTimer" type="Timer" parent="Personaje_DV"]
wait_time = 0.8
one_shot = true

[node name="Camera2D" type="Camera2D" parent="Personaje_DV"]
offset = Vector2( -170, -90 )
anchor_mode = 0
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = -32
limit_top = -50

[node name="GUI" type="CanvasLayer" parent="Personaje_DV/Camera2D"]

[node name="LifeBarPDV" type="ProgressBar" parent="Personaje_DV/Camera2D/GUI"]
margin_left = 564.0
margin_top = 72.0
margin_right = 880.0
margin_bottom = 126.0
rect_scale = Vector2( 0.852542, 0.852542 )
custom_fonts/font = SubResource( 29 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 8 )
script = ExtResource( 19 )

[node name="TítuloPerfil" type="Label" parent="Personaje_DV/Camera2D/GUI"]
margin_left = 396.0
margin_top = 17.0
margin_right = 1022.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "Desarrollo de Videojuegos"
align = 1
valign = 1

[node name="Obtenidos" type="Label" parent="Personaje_DV/Camera2D/GUI"]
margin_left = 1097.0
margin_top = 17.0
margin_right = 1285.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 25 )
custom_styles/normal = SubResource( 26 )

[node name="RecogidosSound" type="Label" parent="Personaje_DV/Camera2D/GUI/Obtenidos"]
margin_left = 100.0
margin_top = 38.0
margin_right = 154.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 18 )
text = "0"
align = 1
valign = 1

[node name="IconSound" type="Sprite" parent="Personaje_DV/Camera2D/GUI/Obtenidos"]
position = Vector2( 56, 62 )
scale = Vector2( 0.172159, 0.172159 )
texture = ExtResource( 22 )

[node name="Title" type="Label" parent="Personaje_DV/Camera2D/GUI/Obtenidos"]
margin_right = 188.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 27 )
text = "obtenidos"
align = 1
valign = 1

[node name="Control" type="Control" parent="Personaje_DV/Camera2D"]
pause_mode = 2
margin_left = -165.0
margin_top = -85.0
margin_right = -145.0
margin_bottom = -68.0
script = ExtResource( 23 )

[node name="Btn_Menu" type="Button" parent="Personaje_DV/Camera2D/Control"]
pause_mode = 2
anchor_right = 1.05
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -4.0
margin_bottom = 5.0
rect_scale = Vector2( 1, 0.707 )
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 31 )
custom_styles/focus = SubResource( 32 )
custom_styles/disabled = SubResource( 33 )
custom_styles/normal = SubResource( 34 )
script = ExtResource( 15 )

[node name="Menu" type="Sprite" parent="Personaje_DV/Camera2D/Control"]
position = Vector2( 10.5, 7.5 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 14 )

[node name="efecto" type="Tween" parent="Personaje_DV/Camera2D/Control"]
pause_mode = 2

[node name="Control" type="Control" parent="Personaje_DV/Camera2D/Control"]
margin_left = -157.0
margin_top = 10.0
margin_right = -16.0
margin_bottom = 155.0
script = ExtResource( 31 )
__meta__ = {
"_edit_group_": true
}

[node name="RedPanel" type="Sprite" parent="Personaje_DV/Camera2D/Control/Control"]
position = Vector2( 71, 84 )
scale = Vector2( 0.768571, 0.824286 )
texture = ExtResource( 16 )

[node name="Left" type="TextureButton" parent="Personaje_DV/Camera2D/Control/Control"]
margin_left = 30.0
margin_top = 108.0
margin_right = 130.0
margin_bottom = 208.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 26 )

[node name="Select" type="TextureRect" parent="Personaje_DV/Camera2D/Control/Control/Left"]
visible = false
margin_left = -32.0
margin_top = 35.0
margin_right = 8.0
margin_bottom = 75.0
texture = ExtResource( 30 )
script = ExtResource( 32 )

[node name="Pause" type="TextureButton" parent="Personaje_DV/Camera2D/Control/Control"]
margin_left = 62.0
margin_top = 108.0
margin_right = 162.0
margin_bottom = 208.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 25 )

[node name="Select" type="TextureRect" parent="Personaje_DV/Camera2D/Control/Control/Pause"]
visible = false
margin_left = -32.0
margin_top = 35.0
margin_right = 8.0
margin_bottom = 75.0
texture = ExtResource( 30 )
script = ExtResource( 32 )

[node name="Exit" type="TextureButton" parent="Personaje_DV/Camera2D/Control/Control"]
margin_left = 91.0
margin_top = 107.0
margin_right = 191.0
margin_bottom = 207.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 24 )

[node name="Select" type="TextureRect" parent="Personaje_DV/Camera2D/Control/Control/Exit"]
visible = false
margin_left = -32.0
margin_top = 35.0
margin_right = 8.0
margin_bottom = 75.0
texture = ExtResource( 30 )
script = ExtResource( 32 )

[node name="Volume" type="TextureButton" parent="Personaje_DV/Camera2D/Control/Control"]
margin_left = 81.0
margin_top = 79.0
margin_right = 181.0
margin_bottom = 179.0
rect_scale = Vector2( 0.23, 0.23 )
texture_normal = ExtResource( 29 )
texture_disabled = ExtResource( 28 )
script = ExtResource( 34 )

[node name="Select" type="TextureRect" parent="Personaje_DV/Camera2D/Control/Control/Volume"]
visible = false
margin_left = -32.0
margin_top = 40.0
margin_right = 8.0
margin_bottom = 80.0
texture = ExtResource( 30 )
script = ExtResource( 32 )

[node name="Score" type="TextureButton" parent="Personaje_DV/Camera2D/Control/Control"]
margin_left = 42.0
margin_top = 77.0
margin_right = 142.0
margin_bottom = 177.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 27 )

[node name="Select" type="TextureRect" parent="Personaje_DV/Camera2D/Control/Control/Score"]
visible = false
margin_left = -32.0
margin_top = 44.0
margin_right = 8.0
margin_bottom = 84.0
texture = ExtResource( 30 )
script = ExtResource( 32 )

[node name="RichTextLabel" type="RichTextLabel" parent="Personaje_DV/Camera2D/Control/Control"]
margin_left = 30.0
margin_top = 39.0
margin_right = 119.0
margin_bottom = 65.0
theme = SubResource( 36 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Opciones"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 33 )
volume_db = -20.0
autoplay = true

[node name="Pared" type="StaticBody2D" parent="."]
position = Vector2( 10, 169 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared"]
position = Vector2( 33.5, -2.5 )
shape = SubResource( 38 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Pared"]
position = Vector2( 134.5, -2.5 )
shape = SubResource( 39 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Pared"]
position = Vector2( 134, 178 )
shape = SubResource( 40 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Pared"]
position = Vector2( 47.5, 352.5 )
shape = SubResource( 41 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Pared"]
position = Vector2( 106.5, -82.5 )
shape = SubResource( 42 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Pared"]
position = Vector2( 454, 148 )
shape = SubResource( 42 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Pared"]
position = Vector2( 280, 324 )
shape = SubResource( 42 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Pared"]
position = Vector2( 280, -54.5 )
shape = SubResource( 43 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Pared"]
position = Vector2( 136, -139.5 )
shape = SubResource( 44 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Pared"]
position = Vector2( 612.5, -112.5 )
shape = SubResource( 45 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Pared"]
position = Vector2( 568.5, -26.5 )
shape = SubResource( 46 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Pared"]
position = Vector2( 729, -10 )
shape = SubResource( 47 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Pared"]
position = Vector2( 756, 418.5 )
shape = SubResource( 48 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Pared"]
position = Vector2( 221.5, 533.25 )
shape = SubResource( 49 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Pared"]
position = Vector2( 18.5, 534.5 )
shape = SubResource( 50 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="Pared"]
position = Vector2( 366.5, 562.5 )
shape = SubResource( 51 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="Pared"]
position = Vector2( 279, 439.5 )
shape = SubResource( 52 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="Pared"]
position = Vector2( 715.5, 165.5 )
shape = SubResource( 53 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="Pared"]
position = Vector2( 860.5, 21 )
shape = SubResource( 54 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="Pared"]
position = Vector2( -20.5, 204.5 )
shape = SubResource( 55 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="Pared"]
position = Vector2( 559.5, 610 )
shape = SubResource( 56 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="Pared"]
position = Vector2( 577, -179 )
shape = SubResource( 56 )

[node name="Puertas" type="Node2D" parent="."]

[node name="primeraPuerta" type="StaticBody2D" parent="Puertas"]
position = Vector2( 414, 240 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puertas/primeraPuerta"]
position = Vector2( 0, 19 )
shape = SubResource( 58 )

[node name="TextureRect" type="TextureRect" parent="Puertas/primeraPuerta"]
margin_left = -10.0
margin_top = -10.0
margin_right = 118.0
margin_bottom = 246.0
rect_scale = Vector2( 0.23, 0.23 )
texture = ExtResource( 37 )

[connection signal="body_entered" from="Llaves/Llaves" to="Llaves/Llaves" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Llaves/Llaves2" to="Llaves/Llaves2" method="_on_Area2D_body_entered"]
[connection signal="pressed" from="Personaje_DV/Camera2D/Control/Btn_Menu" to="Personaje_DV/Camera2D/Control" method="_on_Btn_Menu_pressed"]
[connection signal="pressed" from="Personaje_DV/Camera2D/Control/Control/Left" to="Personaje_DV/Camera2D/Control/Control" method="_on_Left_pressed"]
[connection signal="pressed" from="Personaje_DV/Camera2D/Control/Control/Pause" to="Personaje_DV/Camera2D/Control/Control" method="_on_Pause_pressed"]
[connection signal="pressed" from="Personaje_DV/Camera2D/Control/Control/Exit" to="Personaje_DV/Camera2D/Control/Control" method="_on_Exit_pressed"]
[connection signal="pressed" from="Personaje_DV/Camera2D/Control/Control/Volume" to="Personaje_DV/Camera2D/Control/Control" method="_on_Volume_pressed"]
[connection signal="pressed" from="Personaje_DV/Camera2D/Control/Control/Score" to="Personaje_DV/Camera2D/Control/Control" method="_on_Score_pressed"]
